// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home component should render services 1`] = `
<ContextProvider
  value={
    Object {
      "apm": Object {
        "config": Object {},
        "stackVersion": "0",
      },
    }
  }
>
  <Home
    tab="services"
  />
</ContextProvider>
`;

exports[`Home component should render traces 1`] = `
<ContextProvider
  value={
    Object {
      "apm": Object {
        "config": Object {},
        "stackVersion": "0",
      },
    }
  }
>
  <Home
    tab="traces"
  />
</ContextProvider>
`;
